--- a/sass/profilestyle.scss
+++ b/sass/profilestyle.scss
@@ -817,8 +817,8 @@ section.active > .title a{
   color: #fff;
   background-color: $grey !important;
   border:#fff 0px solid !important; 
-  height: 34px !important; 
-  width: 90px !important;
+  height: 50px !important;
+	width: 100% !important;
 }
 
 #social-Post #post-error {
