--- a/css/formBlackStyle.css
+++ b/css/formBlackStyle.css
@@ -96,13 +96,18 @@
 }
 
 /* line 94, ../sass/formBlackStyle.scss */
+.touchcarousel {
+  height: auto !important;
+}
+
+/* line 98, ../sass/formBlackStyle.scss */
 .formBlack .errorMessage {
   font-size: 14px !important;
   color: #ed1c24 !important;
   text-align: right !important;
 }
 
-/* line 99, ../sass/formBlackStyle.scss */
+/* line 103, ../sass/formBlackStyle.scss */
 .formBlack .upload-box {
   height: 103px;
   border: #787878 1px solid;
@@ -110,7 +115,7 @@
   margin-bottom: 20px !important;
   margin-top: 20px !important;
 }
-/* line 105, ../sass/formBlackStyle.scss */
+/* line 109, ../sass/formBlackStyle.scss */
 .formBlack .upload-box .thumbnail-box {
   text-align: center !important;
   background-color: #303030 !important;
@@ -118,22 +123,22 @@
   margin: 1px !important;
   width: 99px !important;
 }
-/* line 112, ../sass/formBlackStyle.scss */
+/* line 116, ../sass/formBlackStyle.scss */
 .formBlack .upload-box .thumbnail {
   background-color: #303030 !important;
   height: 106px;
   width: 108px;
 }
-/* line 117, ../sass/formBlackStyle.scss */
+/* line 121, ../sass/formBlackStyle.scss */
 .formBlack .upload-box .small-3 {
   padding: 0px !important;
 }
-/* line 120, ../sass/formBlackStyle.scss */
+/* line 124, ../sass/formBlackStyle.scss */
 .formBlack .upload-box .small-9 {
   padding-left: 10% !important;
   padding-top: 10% !important;
 }
-/* line 124, ../sass/formBlackStyle.scss */
+/* line 128, ../sass/formBlackStyle.scss */
 .formBlack .upload-box .upload-reveal {
   background-color: #232323;
   left: 10%;
@@ -141,7 +146,7 @@
   width: 270%;
 }
 
-/* line 133, ../sass/formBlackStyle.scss */
+/* line 137, ../sass/formBlackStyle.scss */
 .formBlack input[type='checkbox'] + label {
   background-color: #303030 !important;
   height: 25px !important;
@@ -154,12 +159,12 @@
   padding-right: 10px;
 }
 
-/* line 145, ../sass/formBlackStyle.scss */
+/* line 149, ../sass/formBlackStyle.scss */
 .formBlack input[type='checkbox']:checked + label {
   background-color: #ff7505 !important;
 }
 
-/* line 149, ../sass/formBlackStyle.scss */
+/* line 153, ../sass/formBlackStyle.scss */
 .ui-datepicker {
   width: 216px;
   height: auto;
@@ -167,24 +172,24 @@
   font: 9pt Arial, sans-serif;
 }
 
-/* line 157, ../sass/formBlackStyle.scss */
+/* line 161, ../sass/formBlackStyle.scss */
 .ui-datepicker-header {
   background-color: #303030;
   color: #787878 !important;
   line-height: 30px;
 }
-/* line 161, ../sass/formBlackStyle.scss */
+/* line 165, ../sass/formBlackStyle.scss */
 .ui-datepicker-header a {
   color: #787878 !important;
 }
 
-/* line 169, ../sass/formBlackStyle.scss */
+/* line 173, ../sass/formBlackStyle.scss */
 .ui-datepicker-title {
   text-align: center;
   font-weight: bold;
 }
 
-/* line 174, ../sass/formBlackStyle.scss */
+/* line 178, ../sass/formBlackStyle.scss */
 .ui-datepicker-prev, .ui-datepicker-next {
   display: inline-block;
   width: 30px;
@@ -195,24 +200,24 @@
   overflow: hidden;
 }
 
-/* line 184, ../sass/formBlackStyle.scss */
+/* line 188, ../sass/formBlackStyle.scss */
 .ui-datepicker-prev {
   float: left;
   background-position: center -30px;
 }
 
-/* line 188, ../sass/formBlackStyle.scss */
+/* line 192, ../sass/formBlackStyle.scss */
 .ui-datepicker-next {
   float: right;
   background-position: center 0px;
 }
 
-/* line 194, ../sass/formBlackStyle.scss */
+/* line 198, ../sass/formBlackStyle.scss */
 .ui-datepicker-calendar {
   width: 216px !important;
 }
 
-/* line 198, ../sass/formBlackStyle.scss */
+/* line 202, ../sass/formBlackStyle.scss */
 .qq-upload-button {
   box-sizing: initial !important;
   background: #ff7505 !important;
@@ -220,21 +225,21 @@
   color: #f3f3f3 !important;
   width: 100% !important;
 }
-/* line 204, ../sass/formBlackStyle.scss */
+/* line 208, ../sass/formBlackStyle.scss */
 .qq-upload-button:hover {
   background: #ff7505 !important;
 }
 
-/* line 211, ../sass/formBlackStyle.scss */
+/* line 215, ../sass/formBlackStyle.scss */
 .upload-box img {
   max-width: none !important;
 }
 
-/* line 219, ../sass/formBlackStyle.scss */
+/* line 223, ../sass/formBlackStyle.scss */
 .formBlack #s2id_trackFeaturing {
   margin-bottom: 10px !important;
 }
-/* line 222, ../sass/formBlackStyle.scss */
+/* line 226, ../sass/formBlackStyle.scss */
 .formBlack .select2-container-multi .select2-choices {
   font-size: 14px;
   background: #1c1c1c !important;
@@ -242,30 +247,30 @@
   border: 1px solid #303030 !important;
   margin-left: 0px !important;
 }
-/* line 228, ../sass/formBlackStyle.scss */
+/* line 232, ../sass/formBlackStyle.scss */
 .formBlack .select2-container-multi .select2-choices:focus {
   background-color: #303030 !important;
   border-bottom: 0px solid #787878 !important;
 }
-/* line 234, ../sass/formBlackStyle.scss */
+/* line 238, ../sass/formBlackStyle.scss */
 .formBlack .select2-container-active {
   border: 1px solid #303030 !important;
 }
-/* line 238, ../sass/formBlackStyle.scss */
+/* line 242, ../sass/formBlackStyle.scss */
 .formBlack .select2-no-results {
   display: none !important;
 }
-/* line 242, ../sass/formBlackStyle.scss */
+/* line 246, ../sass/formBlackStyle.scss */
 .formBlack .select2-drop {
   color: #f3f3f3 !important;
   background: #1c1c1c !important;
   border: 1px solid #1c1c1c !important;
 }
-/* line 248, ../sass/formBlackStyle.scss */
+/* line 252, ../sass/formBlackStyle.scss */
 .formBlack .select2-highlighted {
   background: #ff7505 !important;
 }
-/* line 251, ../sass/formBlackStyle.scss */
+/* line 255, ../sass/formBlackStyle.scss */
 .formBlack .select2-search-choice {
   font-weight: 500 !important;
   height: 30px !important;
@@ -278,14 +283,14 @@
   -webkit-box-shadow: none !important;
   box-shadow: none !important;
 }
-/* line 263, ../sass/formBlackStyle.scss */
+/* line 267, ../sass/formBlackStyle.scss */
 .formBlack .select2-search input.select2-active {
   background: #1c1c1c !important;
   color: #f3f3f3 !important;
 }
 
 /* Progress Bar */
-/* line 271, ../sass/formBlackStyle.scss */
+/* line 275, ../sass/formBlackStyle.scss */
 .ui-progressbar,
 .ui-progressbar-value {
   position: relative;
@@ -295,7 +300,7 @@
   border-radius: 1px;
 }
 
-/* line 280, ../sass/formBlackStyle.scss */
+/* line 284, ../sass/formBlackStyle.scss */
 .ui-progressbar {
   cursor: pointer;
   margin: 15px 0 20px 0;
@@ -304,13 +309,13 @@
   top: 10px;
 }
 
-/* line 288, ../sass/formBlackStyle.scss */
+/* line 292, ../sass/formBlackStyle.scss */
 .ui-progressbar-value {
   top: 12px;
   background: #ff7505;
 }
 
-/* line 293, ../sass/formBlackStyle.scss */
+/* line 297, ../sass/formBlackStyle.scss */
 .ui-progressbar-value span.progressTooltip {
   position: absolute;
   display: block;
